--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <script src="js/script.js" type="text/javascript" defer></script>
     <title>Vue Email List</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
