--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <title>Vue Email List</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <ul>
+        <li id="mail"></li>
+      </ul>
+    </div>
   </body>
 </html>
